modified:   week4/controllers/contacts.js 	modified:   week4/swagger.js 	modified:   week4/swagger.json 	new file:   week6/.gitignore 	new file:   week6/.vscode/launch.json 	new file:   week6/app.js 	new file:   week6/cardexample.json 	new file:   week6/controllers/cardspecifics.js 	new file:   week6/db/connect.js 	new file:   week6/package-lock.json 	new file:   week6/package.json 	new file:   week6/routes.rest 	new file:   week6/routes/cards.js 	new file:   week6/routes/index.js     new file:   week6/routes/swagger.js 	new file:   week6/routes2.rest 	new file:   week6/swagger.js 	new file:   week6/swagger.json 	modified:   week6/routes2.rest 	modified:   week6/swagger.json
